--- a/index.html
+++ b/index.html
@@ -1,6 +1,76 @@
-<html>
+<!doctype html>
+<html lang="en">
+	<head>
+    <!-- Required meta tags -->
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	    <!-- Bootstrap CSS -->
+	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+	    <title>Hello, world!</title>
+ 	</head>
 	<body>
-		<h1>Васильев Гордей Владимирович</h1>
-		<h3>(Gordey Vfsilev)</h3>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="index.html">Васильев Гордей</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="education.html">Образование и доп. образование</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="work_experience.html">Опыт работы</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Достижения
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="contests_olympiads.html">Конкурсы и олимпиады</a>
+							<a class="dropdown-item" href="publications.html">Публикации</a>
+							<a class="dropdown-item" href="conferences.html">Конференции</a>
+							<a class="dropdown-item" href="registration_programs.html">Регистрация программ</a>
+							<a class="dropdown-item" href="acknowledgments.html">Благодарности</a>
+							<a class="dropdown-item" href="projects.html">Проекты</a>
+							<a class="dropdown-item" href="GTO.html">ГТО</a>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="personal_qualities.html">Личные качества</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="additional_information.html">Дополнительные сведения</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contacts.html">Контакты</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<br>
+		<br>
+		<p class="text-center">Васильев Гордей Владимирович</p>
+		<p class="text-center">(Gordey Vfsilev)</p>
+		<p class="text-center">Дата рождения: 17.04.1997</p>
+		<p class="text-center">г. Комсомольск-на-Амуре</p>
+		<div class="text-center">
+			<img src="assets\img\face1.jpg" class="rounded" alt="...">
+		</div>
+		<br>
+		<br>
+		<div class="text-center">
+			<img src="assets\img\face2.jpg" class="rounded" alt="...">
+		</div>
+		<br>
+		<br>
+		<br>
+		<!-- Optional JavaScript -->
+	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 	</body>
 </html>
