--- a/personal_qualities.html
+++ b/personal_qualities.html
@@ -8,7 +8,7 @@
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-	    <title>Hello, world!</title>
+	    <title>Personal qualities</title>
  	</head>
 
 	<body>
@@ -59,7 +59,17 @@
 		<br>
 		<p class="text-center">Знание основных операционных систем, приложений</p>
 		<br>
-		<p class="text-center">Знание языков программирования (Java, C#, Python)</p>
+		<p class="text-center">Знание языков программирования: Java, Python, C#</p>
+		<br>
+		<p class="text-center">Знание иностранных языков: Перевод со словарем</p>
+		<br>
+		<p class="text-center">Стремление к развитию</p>
+		<br>
+		<p class="text-center">Коммуникабельный</p>
+		<br>
+		<p class="text-center">Целеустремленный</p>
+		<br>
+		<p class="text-center">Стремление к развитию</p>
 		<br>
 		<!-- Optional JavaScript -->
 	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
