--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-	    <title>Hello, world!</title>
+	    <title>Projects</title>
  	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -52,14 +52,40 @@
 		</nav>
 		<br>
 		<br>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/eXwdvBqjRkA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<br>
-		<br>
-		<br>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/7jZ813us19g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<br>
-		<br>
-		<br>
+		<div class="text-center">
+			<a href="https://github.com/Gordey007">Github</a>
+			<br>
+			<br>
+			<br>
+			<p class="text-center">Мобильное приложение на Android Шпион</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/eXwdvBqjRkA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<br>
+			<a href="https://play.google.com/store/apps/details?id=gordey007.twospies">Два шпиона / шпион</a>
+			<br>
+			<br>
+			<p class="text-center">Мобильное приложение на Android Да/Нет</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/7jZ813us19g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<br>
+			<a href="https://play.google.com/store/apps/details?id=gordey.yes_no">Да / нет</a>
+			<br>
+			<br>
+			<p class="text-center">Дипломный проект: Обеспечение безопасности систем умного дома с использованием компьютерного зрения и сверточной нейронной сетит</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/tBVqHIVNmAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>			<br>
+			<br>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/7zrt78E6aOI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>			<br>
+			<br>
+			<br>
+			<p class="text-center">Диплом</p>
+			<iframe src="https://drive.google.com/file/d/15qvz5c8PcmgeqVIygb-FUyw2NNLV1uOp/preview" width="700" height="800"></iframe>
+			<br>
+			<br>
+			<br>
+			<p class="text-center">Презентация диплома</p>
+			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTnrxWTPIsgsZQOmpDBKtbRh8yGgkTDWixu_FycRe52SYrH4BmjO9asNHzDXVgAdg/embed?start=true&loop=false&delayms=60000" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>			<br>
+			<br>
+			<br>
+			<br>
+		</div>
 		<!-- Optional JavaScript -->
 	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
