--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-	    <title>Hello, world!</title>
+	    <title>Publications</title>
  	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -58,7 +58,7 @@
 			</div>
 			<div class="card-body">
 				<h5 class="card-title">Распознавание домашних питомцев с помощью mask R-CNN, COCO, OpenCV</h5>
-				<a href="#" class="btn btn-primary">Журнал</a>
+				<a href="https://drive.google.com/file/d/187KVaaaehxbKzzVfvpToA68qGDBCkkWb/view?usp=sharing" class="btn btn-primary">Журнал</a>
 			</div>
 			<div class="card-footer text-muted">
 					14 июля 2020 г.
@@ -92,6 +92,83 @@
 			</div>
 			<div class="card-footer text-muted">
 					14 июня 2019 г.
+			</div>
+		</div>
+		<br>
+		<br>
+		<br>
+		<div class="card text-center">
+			<div class="card-header">
+				ФГБОУ ВО «КнАГУ»
+			</div>
+			<div class="card-body">
+				<h5 class="card-title">ПОБОЧНОЕ ЭЛЕКТРОМАГНИТНОЕ ИЗЛУЧЕНИЕ И НАВОДКИ</h5>
+				<a href="https://drive.google.com/file/d/1Cy0KKoh6cYAV5Jel6jECTE1PhS4YoBJ4/view?usp=sharing" class="btn btn-primary">Статья</a>
+			</div>
+			<div class="card-footer text-muted">
+				2016 г.
+			</div>
+		</div>
+		<br>
+		<br>
+		<br>
+		<div class="card text-center">
+			<div class="card-header">
+				ФГБОУ ВО «КнАГУ»
+			</div>
+			<div class="card-body">
+				<h5 class="card-title">Построение информационной системы «Умный дом»</h5>
+				<a href="https://drive.google.com/file/d/1AcDKtrmJu0bPpVIYJhrTPpfrAEkXgaW9/view?usp=sharing" class="btn btn-primary">Статья</a>
+			</div>
+			<div class="card-footer text-muted">
+				2018 г.
+			</div>
+		</div>
+		<br>
+		<br>
+		<br>
+		<div class="card text-center">
+			<div class="card-header">
+				ФГБОУ ВО «КнАГУ»
+			</div>
+			<div class="card-body">
+				<h5 class="card-title">ОПТИМИЗАЦИЯ ПЛАТФОРМЫ ДЛЯ ПРОВЕДЕНИЯ
+					СОРЕВНОВАНИЙ ПО ИНФОРМАЦИОННОЙ БЕЗОПАСНОСТИ</h5>
+				<a href="https://drive.google.com/file/d/1jB3zuHqp9JyzUKgAC_zag4iuQnjcKO_d/view?usp=sharing" class="btn btn-primary">Статья</a>
+			</div>
+			<div class="card-footer text-muted">
+				2018 г.
+			</div>
+		</div>
+		<br>
+		<br>
+		<br>
+		<div class="card text-center">
+			<div class="card-header">
+				ФГБОУ ВО «КнАГУ»
+			</div>
+			<div class="card-body">
+				<h5 class="card-title">ОБНАРУЖЕНИЕ DDOS АТАК</h5>
+				<a href="https://drive.google.com/file/d/10bD97AVZryOx8lS4Lwa22fKzleWlc1Kc/view?usp=sharing" class="btn btn-primary">Статья</a>
+			</div>
+			<div class="card-footer text-muted">
+				2018 г.
+			</div>
+		</div>
+		<br>
+		<br>
+		<br>
+		<div class="card text-center">
+			<div class="card-header">
+				ФГБОУ ВО «КнАГУ»
+			</div>
+			<div class="card-body">
+				<h5 class="card-title">ОБНАРУЖЕНИЕ DOS-АТАК С ПРИМЕНЕНИЕМ НЕЙРОННЫХ
+					СЕТЕЙ</h5>
+				<a href="https://drive.google.com/file/d/1a21Vn0rAHAsZ8oMjeFs3EueSNge2EcY9/view?usp=sharing" class="btn btn-primary">Статья</a>
+			</div>
+			<div class="card-footer text-muted">
+				2018 г.
 			</div>
 		</div>
 		<br>
