--- a/registration_programs.html
+++ b/registration_programs.html
@@ -7,8 +7,9 @@
 
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+		<link rel="stylesheet" href="assets/css/gallery/gallery.css">
 
-	    <title>Hello, world!</title>
+	    <title>Registration programs</title>
  	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -52,199 +53,244 @@
 		</nav>
 		<br>
 		<br>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/1.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Artificial intelligence training</p>
-					</div>
-				</div>
+		<div class="container">
+			<div class="mySlides">
+				<div class="numbertext">1 / 23</div>
+				<img src="assets/img/certificates/1.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/2.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Base 64</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">2 / 23</div>
+				<img src="assets/img/certificates/2.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/3.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">centeringClassification</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">3 / 23</div>
+				<img src="assets/img/certificates/3.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/4.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">ComplexNumbersCalculator</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">4 / 23</div>
+				<img src="assets/img/certificates/4.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/5.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Face recognition</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">5 / 23</div>
+				<img src="assets/img/certificates/5.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/6.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">k-NN (k-nearest neighbors algorithm)</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">6 / 23</div>
+				<img src="assets/img/certificates/6.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/7.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Method kMeans </p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">7 / 23</div>
+				<img src="assets/img/certificates/7.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/8.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Smart House</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">8 / 23</div>
+				<img src="assets/img/certificates/8.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/9.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">suspended_kNN</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">9 / 23</div>
+				<img src="assets/img/certificates/9.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/10.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">YesNo</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">10 / 23</div>
+				<img src="assets/img/certificates/10.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/11.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Криптосистема с открытым ключом Эль-Гамаля (Elgamal)</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">11 / 23</div>
+				<img src="assets/img/certificates/11.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/12.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Обучающая программа по курсу математика</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">12 / 23</div>
+				<img src="assets/img/certificates/12.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/13.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">ПО для открытия электронного замка</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">13 / 23</div>
+				<img src="assets/img/certificates/13.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/14.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Программа для астрологического прогноза-1</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">14 / 23</div>
+				<img src="assets/img/certificates/14.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/15.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Программа для нахождения свободного usb-порта.jpg</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">15 / 23</div>
+				<img src="assets/img/certificates/15.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/16.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Программа для развития мелкой моторики</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">16 / 23</div>
+				<img src="assets/img/certificates/16.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/17.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Программа для смыслового анализа текста.jpg</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">17 / 23</div>
+				<img src="assets/img/certificates/17.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/18.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Программа для создания квадратной матрицы и вычислений</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">18 / 23</div>
+				<img src="assets/img/certificates/18.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/19.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Программа для тестирования знаний по информатике</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">19 / 23</div>
+				<img src="assets/img/certificates/19.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/20.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Северное приложение для рецептов приготовления еды</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">20 / 23</div>
+				<img src="assets/img/certificates/20.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/21.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Сервер для редактирования бд</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">21 / 23</div>
+				<img src="assets/img/certificates/21.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/22.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Справочник праздников</p>
-					</div>
-				</div>
+
+			<div class="mySlides">
+				<div class="numbertext">22 / 23</div>
+				<img src="assets/img/certificates/22.jpg" style="width:50%">
 			</div>
-			<div class="col-sm-6">
-				<div class="card" style="width: 18rem;">
-					<img src="assets/img/certificates/23.jpg" class="card-img-top" alt="...">
-					<div class="card-body">
-						<p class="card-text">Умное отопление в теплице</p>
-					</div>
+
+			<div class="mySlides">
+				<div class="numbertext">23 / 23</div>
+				<img src="assets/img/certificates/23.jpg" style="width:50%">
+			</div>
+
+			<a class="prev" onclick="plusSlides(-1)">❮</a>
+			<a class="next" onclick="plusSlides(1)">❯</a>
+
+			<div class="caption-container">
+				<p id="caption"></p>
+			</div>
+
+			<div class="row">
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/1.jpg" style="width:100%" onclick="currentSlide(1)" alt="Artificial intelligence training">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Base 64">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/3.jpg" style="width:100%" onclick="currentSlide(3)" alt="centeringClassification">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/4.jpg" style="width:100%" onclick="currentSlide(4)" alt="ComplexNumbersCalculator">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Face recognition">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/6.jpg" style="width:100%" onclick="currentSlide(6)" alt="k-NN (k-nearest neighbors algorithm)">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/7.jpg" style="width:100%" onclick="currentSlide(7)" alt="Method kMeans">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/8.jpg" style="width:100%" onclick="currentSlide(8)" alt="Smart House">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/9.jpg" style="width:100%" onclick="currentSlide(9)" alt="suspended_kNN">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/10.jpg" style="width:100%" onclick="currentSlide(10)" alt="YesNo">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/11.jpg" style="width:100%" onclick="currentSlide(11)" alt="Криптосистема с открытым ключом Эль-Гамаля (Elgamal)">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/12.jpg" style="width:100%" onclick="currentSlide(12)" alt="Обучающая программа по курсу математика">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/13.jpg" style="width:100%" onclick="currentSlide(13)" alt="ПО для открытия электронного замка">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/14.jpg" style="width:100%" onclick="currentSlide(14)" alt="Программа для астрологического прогноза">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/15.jpg" style="width:100%" onclick="currentSlide(15)" alt="Программа для нахождения свободного usb-порта">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/16.jpg" style="width:100%" onclick="currentSlide(16)" alt="Программа для развития мелкой моторики">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/17.jpg" style="width:100%" onclick="currentSlide(17)" alt="Программа для смыслового анализа текста">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/18.jpg" style="width:100%" onclick="currentSlide(18)" alt="Программа для создания квадратной матрицы и вычислений">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/19.jpg" style="width:100%" onclick="currentSlide(19)" alt="Программа для тестирования знаний по информатике">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/20.jpg" style="width:100%" onclick="currentSlide(20)" alt="Северное приложение для рецептов приготовления еды">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/21.jpg" style="width:100%" onclick="currentSlide(21)" alt="Сервер для редактирования БД">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/22.jpg" style="width:100%" onclick="currentSlide(22)" alt="Справочник праздников">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="assets/img/certificates/23.jpg" style="width:100%" onclick="currentSlide(23)" alt="Умное отопление в теплице">
 				</div>
 			</div>
 		</div>
+
+
+
 		<br>
 		<br>
 		<br>
+
+
 		<!-- Optional JavaScript -->
 	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+		<script>
+			var slideIndex = 1;
+			showSlides(slideIndex);
+
+			function plusSlides(n) {
+				showSlides(slideIndex += n);
+			}
+
+			function currentSlide(n) {
+				showSlides(slideIndex = n);
+			}
+
+			function showSlides(n) {
+				var i;
+				var slides = document.getElementsByClassName("mySlides");
+				var dots = document.getElementsByClassName("demo");
+				var captionText = document.getElementById("caption");
+				if (n > slides.length) {slideIndex = 1}
+				if (n < 1) {slideIndex = slides.length}
+				for (i = 0; i < slides.length; i++) {
+					slides[i].style.display = "none";
+				}
+				for (i = 0; i < dots.length; i++) {
+					dots[i].className = dots[i].className.replace(" active", "");
+				}
+				slides[slideIndex-1].style.display = "block";
+				dots[slideIndex-1].className += " active";
+				captionText.innerHTML = dots[slideIndex-1].alt;
+			}
+		</script>
 	</body>
 </html>
