--- a/work_experience.html
+++ b/work_experience.html
@@ -8,7 +8,7 @@
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-	    <title>Hello, world!</title>
+	    <title>Work experience</title>
  	</head>
 
 	<body>
@@ -59,6 +59,10 @@
 		<br>
 		<p class="text-center">Исполнительный директор</p>
 		<p class="text-center">ООО «ДВСИБ», г. Комсомольск-на-Амуре, 20.07.2017-12.12.2017</p>
+		<br>
+		<br>
+		<p class="text-center">Специолист по защите информации</p>
+		<p class="text-center">Госкорпорации Ростех, ПАО «ОАК», Компания «Сухой», Филиал Комсомольский-на-Амуре авиационный завод им. Ю.А. Гагарина, г. Комсомольск-на-Амуре, 14.09.2020-по текущие время</p>
 		<br>
 		<br>
 		<br>
