--- a/GTO.html
+++ b/GTO.html
@@ -8,7 +8,7 @@
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-	    <title>Hello, world!</title>
+	    <title>GTO</title>
  	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -52,18 +52,9 @@
 		</nav>
 		<br>
 		<br>
-		<div class="card mb-3" style="max-width: 540px;">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img src="assets/img/gto/1.jpg" class="card-img" alt="...">
-				</div>
-				<div class="col-md-8">
-					<div class="card-body">
-						<p class="card-text">Бронзовый знак отличия Всероссийского физкультурно-спортивного комплекса "готов к труду и обороне" (ГТО) 6 степени</p>
-						<p class="card-text"><small class="text-muted">Июль 2018</small></p>
-					</div>
-				</div>
-			</div>
+		<p class="text-center">Бронзовый знак отличия Всероссийского физкультурно-спортивного комплекса "готов к труду и обороне" (ГТО) 6 степени</p>
+		<div class="text-center">
+			<img src="assets/img/gto/1.jpg" class="rounded" alt="..." style="width:40%">
 		</div>
 		<br>
 		<br>
