--- a/education.html
+++ b/education.html
@@ -4,11 +4,11 @@
     <!-- Required meta tags -->
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+		<link rel="stylesheet" href="assets/css/gallery/gallery2.css">
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-	    <title>Hello, world!</title>
+	    <title>Education</title>
  	</head>
 
 	<body>
@@ -58,13 +58,120 @@
 		<p class="text-center">Кафедра «Информационная безопасность автоматизированных систем»</p>
 		<p class="text-center">Код и направление подготовки (специальность) 10.05.03 – «Информационная безопасность автоматизированных систем»</p>
 		<p class="text-center">Год поступления и окончания 2015-2020 гг.</p>
-		<p class="text-center">Средний балл 4.98</p>
+		<p class="text-center">Средний балл 4.99</p>
 		<p class="text-center">Красный диплом специалиста (очная форма обучения)</p>
 		<p class="text-center">Квалификация специалист по защите информации</p>
+		<div class="container">
+			<div class="mySlides">
+				<div class="numbertext">1 / 3</div>
+				<img src="assets/img/Education/diploma_1.jpg" style="width:70%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">2 / 3</div>
+				<img src="assets/img/Education/diploma_2.jpg" style="width:50%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">3 / 3</div>
+				<img src="assets/img/Education/diploma_3.jpg" style="width:50%">
+			</div>
+
+			<a class="prev" onclick="plusSlides(-1)">❮</a>
+			<a class="next" onclick="plusSlides(1)">❯</a>
+
+			<div class="row">
+				<div class="center_row">
+					<div class="column">
+						<img class="demo cursor" src="assets/img/Education/diploma_1.jpg" style="width:100%" onclick="currentSlide(1)" alt="Диплом 1">
+					</div>
+					<div class="column">
+						<img class="demo cursor" src="assets/img/Education/diploma_2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Диплом 2">
+					</div>
+					<div class="column">
+						<img class="demo cursor" src="assets/img/Education/diploma_3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Диплом 3">
+					</div>
+				</div>
+			</div>
+		</div>
 		<br>
 		<br>
 		<p class="text-center">Курс Cisco CCNA Routing and Switching, 10.01.2018-21.04.2019</p>
+		<div class="container">
+			<div class="mySlides">
+				<div class="numbertext">1 / 3</div>
+				<img src="assets/img/Education/cisco_1.jpg" style="width:70%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">2 / 3</div>
+				<img src="assets/img/Education/cisco_2.jpg" style="width:50%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">3 / 3</div>
+				<img src="assets/img/Education/cisco_3.jpg" style="width:50%">
+			</div>
+
+			<a class="prev" onclick="plusSlides(-1)">❮</a>
+			<a class="next" onclick="plusSlides(1)">❯</a>
+
+			<div class="row">
+				<div class="center_row">
+					<div class="column">
+						<img class="demo cursor" src="assets/img/Education/cisco_1.jpg" style="width:100%" onclick="currentSlide(1)" alt="Диплом 1">
+					</div>
+					<div class="column">
+						<img class="demo cursor" src="assets/img/Education/cisco_2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Диплом 2">
+					</div>
+					<div class="column">
+						<img class="demo cursor" src="assets/img/Education/cisco_3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Диплом 3">
+					</div>
+				</div>
+			</div>
+		</div>
+		<br>
+		<br>
 		<p class="text-center">Курс Fogstream Python-разработчик, 12.05.2020-26.02.2020</p>
+		<div class="container">
+			<div class="mySlides">
+				<div class="numbertext">1 / 3</div>
+				<img src="assets/img/Education/python_1.jpg" style="width:70%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">2 / 3</div>
+				<img src="assets/img/Education/python_2.jpg" style="width:50%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">3 / 3</div>
+				<img src="assets/img/Education/python_3.jpg" style="width:50%">
+			</div>
+
+			<a class="prev" onclick="plusSlides(-1)">❮</a>
+			<a class="next" onclick="plusSlides(1)">❯</a>
+
+			<div class="row">
+				<div class="center_row">
+					<div class="column">
+						<img class="demo cursor" src="assets/img/Education/python_1.jpg" style="width:100%" onclick="currentSlide(1)" alt="Диплом 1">
+					</div>
+					<div class="column">
+						<img class="demo cursor" src="assets/img/Education/python_2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Диплом 2">
+					</div>
+					<div class="column">
+						<img class="demo cursor" src="assets/img/Education/python_3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Диплом 3">
+					</div>
+				</div>
+			</div>
+		</div>
+		<br>
+		<br>
+		<p class="text-center">Тест Java Starter</p>
+		<div class="text-center">
+			<img src="assets/img/Education/test_1.PNG" class="rounded" alt="...">
+		</div>
 		<br>
 		<br>
 		<br>
@@ -73,5 +180,35 @@
 	    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+		<script>
+			var slideIndex = 1;
+			showSlides(slideIndex);
+
+			function plusSlides(n) {
+				showSlides(slideIndex += n);
+			}
+
+			function currentSlide(n) {
+				showSlides(slideIndex = n);
+			}
+
+			function showSlides(n) {
+				var i;
+				var slides = document.getElementsByClassName("mySlides");
+				var dots = document.getElementsByClassName("demo");
+				var captionText = document.getElementById("caption");
+				if (n > slides.length) {slideIndex = 1}
+				if (n < 1) {slideIndex = slides.length}
+				for (i = 0; i < slides.length; i++) {
+					slides[i].style.display = "none";
+				}
+				for (i = 0; i < dots.length; i++) {
+					dots[i].className = dots[i].className.replace(" active", "");
+				}
+				slides[slideIndex-1].style.display = "block";
+				dots[slideIndex-1].className += " active";
+				captionText.innerHTML = dots[slideIndex-1].alt;
+			}
+		</script>
 	</body>
 </html>
