--- a/personal_qualities.html
+++ b/personal_qualities.html
@@ -61,7 +61,7 @@
 		<br>
 		<p class="text-center">Знание языков программирования: Java, Python, C#</p>
 		<br>
-		<p class="text-center">Знание иностранных языков: Перевод со словарем</p>
+		<p class="text-center">Знание английского языка: перевод со словарем</p>
 		<br>
 		<p class="text-center">Стремление к развитию</p>
 		<br>
