--- a/education.html
+++ b/education.html
@@ -172,6 +172,11 @@
 		<div class="text-center">
 			<img src="assets/img/Education/test_1.PNG" class="rounded" alt="...">
 		</div>
+                <br>
+                <br>
+                <br>
+		<br>
+		<p class="text-center">Обучаюсь в аспирантуре по специальности 05.13.18 Математическое моделирование, численные методы и комплексы программ</p>
 		<br>
 		<br>
 		<br>
