--- a/contacts.html
+++ b/contacts.html
@@ -53,7 +53,7 @@
 		</nav>
 		<br>
 		<br>
-		<a href="https://www.linkedin.com/in/gordeyvasilev/">Linkedin</a>
+		<a class="text-center" href="https://www.linkedin.com/in/gordeyvasilev/">Linkedin</a>
 		<br>
 		<p class="text-center">Моб. телефон: +7(914)413-62-05</p>
 		<br>
